# player

./: CMakeLists.txt  PLAYER_VERSION.cmake  build_tools.cpp  player.h  player.rc.in  player_version.h.in
src/: audio_output.c  audio_output.h  core.cpp  core.h  decode.c  decode.h  loop.c  loop.h  open.c  open.h  video_output.c  video_output.h
test/: test_play.cpp  test_play_from_hwnd.cpp
